# uvwasi

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  app.c
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_normalize_path.c
.github/: FUNDING.yml
.github/workflows/: ASAN.yml  Android.yml  CI-debug.yml  CI.yml  Coverage.yml  cflite.yml  nodejs.yml
cmake/: Config.cmake.in  FindLIBUV.cmake  FindLibUV.cmake  uvwasi.pc.in
include/: .uvwasi.h.swp  fd_table.h  serdes.h  uv_mapping.h  uvwasi.h  wasi_serdes.h  wasi_types.h
src/: clocks.c  clocks.h  debug.h  fd_table.c  path_resolver.c  path_resolver.h  poll_oneoff.c  poll_oneoff.h  serdes.c  sync_helpers.c  uv_mapping.c  uv_mapping.h  uvwasi.c  wasi_rights.c  wasi_rights.h  wasi_serdes.c
test/: test-args-get.c  test-basic-file-io.c  test-clock-time-get.c  test-common.h  test-ebadf-input-validation.c  test-einval-input-validation.c  test-enotsup-apis.c  test-environ-get.c  test-err-to-string.c  test-fd-advise-dir.c  test-fd-pread-large-offset.c  test-fd-prestat-dir-name.c  test-fd-pwrite-large-offset.c  test-fd-read-empty.c  test-fd-readdir-cookie.c  test-fd-readdir-ls.c  test-fd-readdir.c  test-filestat-set-times.c  test-fstflags-validate.c  test-multiple-wasi-destroys.c  test-path-create-remove-directory.c  test-path-open-absolute.c  test-path-open-malformed-path.c  test-path-open-trailing-slash.c  test-path-open.c  test-path-resolution.c  test-path-symlink-absolute-path.c  test-poll-state-cleanup.c  test-proc-exit.c  test-random-get.c  test-serdes.c  test-sock-accept.c  test-sock-send-recv.c  test-symlink-outbox.c  test-symlink.c  test-uv-mapping.c  test-wasi-destroy-without-init.c
tests/: Makefile  main.c  test_fd_table.c  test_fd_table.h  test_uv_mapping.c  test_uv_mapping.h
